feat: Start Anpassung auf Spring Boot 3